Fixed overall spacing, optimized semantic HTML and hover effects

--- a/styles.css
+++ b/styles.css
@@ -1,180 +1,175 @@
 @font-face {
-    font-family: 'Figtree';
-    src: url(assets/fonts/Figtree-VariableFont_wght.ttf);
+  font-family: "Figtree";
+  src: url(assets/fonts/Figtree-VariableFont_wght.ttf);
 }
 
 body {
-font-family: 'Figtree', serif;
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-min-height: 100vh; 
-margin: 0 auto; 
-background: var(--color-yellow, rgba(244, 208, 78, 1));
+  min-height: 100vh;
+  margin: 0 auto;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  font-family: "Figtree", serif;
+  background: var(--color-yellow, rgba(244, 208, 78, 1));
 }
 
 .card {
-/* Card */
-max-width: 24rem;
-width: 100%;
-height: 32.625rem;
-/* Auto layout */
-display: flex;
-flex-direction: column;
-align-items: flex-start;
-gap: 1.5rem;
-padding: 1.5rem; 
+  max-width: 24rem;
+  width: 100%;
+  height: 32.625rem;
 
-box-sizing: border-box;
-border: 0.0625rem solid var(--color-gray-950, rgba(17, 17, 17, 1));
-border-radius: 1.25rem;
-box-shadow: 0.5rem 0.5rem 0 0 rgba(0, 0, 0, 1);
-background: var(--color-white, rgba(255, 255, 255, 1));
+  margin: 0;
+  gap: var(--spacing-200, 24);
+  padding: 1.5rem;
+
+  box-sizing: border-box;
+  border: 0.0625rem solid var(--color-gray-950, rgba(17, 17, 17, 1));
+  border-radius: 1.25rem;
+  box-shadow: 0.5rem 0.5rem 0 0 rgba(0, 0, 0, 1);
+  background: var(--color-white, rgba(255, 255, 255, 1));
 }
 
 #pic {
-/* Blog Image */
-width: 100%;
-height: 12.5rem;
-border-radius: 0.625rem;
-background: var(--color-yellow, rgba(244, 208, 78, 1));
+  /* Blog Image */
+  width: 100%;
+  height: 12.5rem;
+  margin-bottom: 1.5rem;
+
+  border-radius: 0.625rem;
+  background: var(--color-yellow, rgba(244, 208, 78, 1));
 }
 
 #content {
-/* Content */
-width: 100%;
-height: 12.125rem;
-/* Auto layout */
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: flex-start;
-gap: 0;
+  /* Content */
+  width: 100%;
+  height: 12.125rem;
+  /* Auto layout */
+  gap: var(--spacing-150, 12);
 }
-
 
 #tag {
-/* Category */
-width: 5.125rem;
-height: 1.8125rem;
-/* Auto layout */
-display: flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
-gap: var(--spacing-100, 0.5rem);
-padding: var(--spacing-50, 0.25rem) var(--spacing-150, 0.75rem) var(--spacing-50, 0.25rem) var(--spacing-150, 0.75rem);
+  /* Category */
+  width: 5.125rem;
+  height: 1.8125rem;
+  /* Auto layout */
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: var(--spacing-100, 0.5rem);
+  padding: var(--spacing-50, 0.25rem) var(--spacing-150, 0.75rem)
+    var(--spacing-50, 0.25rem) var(--spacing-150, 0.75rem);
 
-border-radius: 0.25rem;
-background: var(--color-yellow, rgba(244, 208, 78, 1));
+  border-radius: 0.25rem;
+  background: var(--color-yellow, rgba(244, 208, 78, 1));
 }
 #tag:hover {
-background-color: black;
+  background-color: black;
 }
 
 #tag p {
-/* Learning */
-width: 3.625rem;
-height: 1.3125rem;
-color: var(--color-gray-950, rgba(17, 17, 17, 1));
+  /* Learning */
+  width: 3.625rem;
+  height: 1.3125rem;
+  color: var(--color-gray-950, rgba(17, 17, 17, 1));
 
-font-size: 0.88rem;
-font-weight: 800;
-line-height: 150%;
-letter-spacing: 0%;
-text-align: left;
+  font-size: 0.88rem;
+  font-weight: 800;
+  line-height: 150%;
+  letter-spacing: 0%;
+  text-align: left;
 }
 #tag p:hover {
-color: var(--color-yellow, rgba(244, 208, 78, 1));
+  color: var(--color-yellow, rgba(244, 208, 78, 1));
 }
 
 #date {
-/* Publish Date */
-width: 8.9375rem;
-height: 1.3125rem;
-margin: 1rem 0;
-color: var(--color-gray-950, rgba(17, 17, 17, 1));
+  /* Publish Date */
+  width: 8.9375rem;
+  height: 1.3125rem;
+  margin: 0.8rem 0;
+  color: var(--color-gray-950, rgba(17, 17, 17, 1));
 
-font-size: 0.875rem;
-font-weight: 500;
-line-height: 150%;
-letter-spacing: 0%;
-text-align: left;
+  font-size: 0.875rem;
+  font-weight: 500;
+  line-height: 150%;
+  letter-spacing: 0%;
+  text-align: left;
 }
 
 h1 {
-width: 100%;
-height: 2.25rem;
-margin: 1rem 0;
-color: var(--color-gray-950, rgba(17, 17, 17, 1));
+  width: 100%;
+  height: 2.25rem;
+  margin: 0;
+  color: var(--color-gray-950, rgba(17, 17, 17, 1));
 
-font-size: 1.5rem;
-font-weight: 800;
-line-height: 150%;
-letter-spacing: 0%;
-text-align: left;
+  font-size: 1.5rem;
+  font-weight: 800;
+  line-height: 150%;
+  letter-spacing: 0%;
+  text-align: left;
 }
 
-h1:hover{
-color: var(--color-yellow, rgba(244, 208, 78, 1));
+h1:hover {
+  color: var(--color-yellow, rgba(244, 208, 78, 1));
 }
 
 #text {
-width: 100%;
-height: 4.5rem;
-margin: 0;
-color: var(--color-gray-500, rgba(107, 107, 107, 1));
+  width: 100%;
+  height: 4.5rem;
+  margin: 0;
+  color: var(--color-gray-500, rgba(107, 107, 107, 1));
 
-font-size: 1rem;
-font-weight: 500;
-line-height: 150%;
-letter-spacing: 0%;
-text-align: left;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 150%;
+  letter-spacing: 0%;
+  text-align: left;
 }
 
-#profile{
-/* Author */
-display: flex;
-flex-direction: row;
-justify-content: start;
-align-items: center;
-gap: var(--spacing-150, 0.75rem);
-margin: 1rem 0;
-align-self: flex-start;
-width: 100%;
-margin: 0;
-padding-left: 0;
+#profile {
+  /* Author */
+  gap: var(--spacing-150, 0.75rem);
+  margin: 1rem 0;
+  width: 100%;
+  margin: 0;
+  padding-left: 0;
 }
 
 #profile figure {
-display: flex;
-flex-direction: row; 
-align-items: center;
-gap: var(--spacing-150, 0.75rem); 
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  margin: 1.5rem auto 1.5rem 0;
+  gap: var(--spacing-150, 0.75rem);
 }
+
 #profile img {
-/* userpic */
-width: 2rem;
-height: 2rem;
-flex: 0 0 2rem;
+  /* userpic */
+  width: 2rem;
+  height: 2rem;
+  flex: 0 0 2rem;
 }
 
 #profile figcaption {
-/* authorname */
-flex: 1 1 auto;
-height: 2rem;
-color: var(--color-gray-950, rgba(17, 17, 17, 1));
+  /* authorname */
+  color: var(--color-gray-950, rgba(17, 17, 17, 1));
 
-font-size: 0.875rem;
-font-weight: 800;
-line-height: 150%;
-letter-spacing: 0%;
-text-align: left;
+  font-size: 0.875rem;
+  font-weight: 800;
+  line-height: 150%;
+  letter-spacing: 0%;
+  text-align: left;
 }
 
-.attribution { 
-font-size: 0.6875rem; text-align: center;
-padding-top: 0.9375rem;
+.attribution {
+  font-size: 0.6875rem;
+  text-align: center;
+  padding-top: 0.9375rem;
 }
-.attribution a { color: hsl(228, 45%, 44%); }
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
